kube/develop/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: cohesiv
  name: api-deployment
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 40%
  template:
    metadata:
      labels:
        app: api
    spec:
      # [START containers]
      containers:
      - name: api
        image: "750213922035.dkr.ecr.us-east-1.amazonaws.com/singularity/cohesiv/api:latest"
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        args:
        - "-addr=:8080"
        - "-tag-directory-addr=$(TAG_SVC_ADDR)"
        - "-access-addr=$(ACCESS_SVC_ADDR)"
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            memory: 256Mi
        livenessProbe:
          initialDelaySeconds: 10
          tcpSocket:
            port: 8080
      # [END containers]
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: cohesiv
  name: tagdirectory-deployment
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 40%
  template:
    metadata:
      labels:
        app: tagdirectory
    spec:
      containers:
      - image: "750213922035.dkr.ecr.us-east-1.amazonaws.com/singularity/cohesiv/tagdirectory:latest"
        name: tagdirectory
        imagePullPolicy: Always
        ports:
        - containerPort: 8001
        args:
        - "-addr=:8001"
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            memory: 256Mi
        livenessProbe:
          initialDelaySeconds: 10
          tcpSocket:
            port: 8001
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: cohesiv
  name: access-deployment
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 40%
  template:
    metadata:
      labels:
        app: access
    spec:
      containers:
      - image: "750213922035.dkr.ecr.us-east-1.amazonaws.com/singularity/cohesiv/access:latest"
        name: access
        imagePullPolicy: Always
        ports:
        - containerPort: 8002
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            memory: 256Mi
        livenessProbe:
          initialDelaySeconds: 10
          tcpSocket:
            port: 8002
