kube/develop/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: cohesiv
  labels:
    application: api
spec:
  selector:
    app: api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: tagdirectory
  namespace: cohesiv
spec:
  type: ClusterIP
  selector:
    app: tagdirectory
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: access
  namespace: cohesiv
spec:
  type: ClusterIP
  selector:
    app: access
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8002
